manifest/fe/fe-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeshoes-fe-deployment
  namespace: beeshoes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beeshoes-fe
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: beeshoes-fe
    spec:
      containers:
        - name: beeshoes-fe
          image: harbor.deploy.io.vn/beeshoes/beeshoes-frontend:v1
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1000Mi
      imagePullSecrets:
        - name: harbor-secret
